Base filtering (equal), sorting, pagination initial impl